--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-grid-system": "^4.3.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
